--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
 
 }
 
+@font-face {
+    font-family: "Norse";
+    src: url(/home/depwine/Downloads/Norse-Bold.otf);
+}
+
 body{
     display: block;
     margin: 0px;
@@ -63,13 +68,12 @@ p {
 
     position: absolute;
     top: 200px;
-    height: 20%;
-    width: 100%;
+    height: 15%;
+    width: 33vw;
     z-index: 2;
 
     flex-direction: row;
     justify-content: center;
-
 
     background-color: rgba(92, 0, 0, 30%);
     
@@ -85,17 +89,18 @@ p {
     max-height: 80%;
     max-width: 100%;
 
-
 }
 
 .transText{
     display:flex;
     align-self: center;
 
-    font-family: cursive;
+    font-family: "Norse";
     font-size: 6vw;
     font-weight: lighter;
     color: white;
+
+    padding: 0px 0px 0px 20px;
 }
 
 .image{
@@ -103,6 +108,7 @@ p {
     max-width: 100%;
 
     position:relative;
+    padding: 0px 20px 0px 0px;
 }
 
 
