--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body{
 
     display: flex;
     height: 100vh;
-    width: 33%;
+    width: 33vw;
 }
 
 #right{
@@ -70,6 +70,7 @@ p {
     top: 200px;
     height: 15%;
     width: 33vw;
+    max-width: 33vw;
     z-index: 2;
 
     flex-direction: row;
@@ -105,10 +106,10 @@ p {
 
 .image{
     object-fit: cover;
-    max-width: 100%;
+    width: 100%;
 
     position:relative;
-    padding: 0px 20px 0px 0px;
+    padding: 0px 0px 0px 0px;
 }
 
 
