stopped storing font locally, is now url linked

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: "Norse";
-    src: url(/home/depwine/Downloads/Norse-Bold.otf);
+    src: url(https://www.1001fonts.com/download/font/norse.regular.otf);
 }
 
 body{
