--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body{
     flex-direction: row;
     width: 67%;
     height: 100vh;
+    background-color: rgb(5, 0, 0);
 
 }
 
@@ -57,11 +58,8 @@ body{
 
 #main{
     height: 34vh;
-    background-color: rgb(5, 0, 0);
+    background-color: rgb(10, 0, 0);
     align-content: center;
-    box-shadow: 
-  
-    0px 5px 10px 0px rgba(250, 0, 0, 0.116);
 
 }
 
@@ -160,23 +158,53 @@ p {
 
 .formText{
     color: rgb(255, 255, 255);
+
     display: grid;
-    grid-template-rows: 1;
+    grid-auto-flow: row;
+    gap: 10px 10px;
+
+    width: 50vw;
+
     font-size: clamp(9px, 1.4vw, 18px);
     
-    margin-top: 1vh;
+    margin-top: 4vh;
     margin-left: 10%;
     margin-right: auto;
     margin-bottom: 4vh;
 }
 
+.topFormRow, .middleFormRow, .bottomFormRow{
+    display: grid;
+    grid-auto-flow: column;
+    gap: 10px 10px;
+}
+
+.fName, .formE, .passOne{
+    display: grid;
+    grid-auto-flow: row;
+}
+
+.lName, .formTel, .passTwo{
+    display: grid;
+    grid-auto-flow: row;
+}
+
+label{
+    padding: 0 20px 5px 0px;
+}
+
 input{
     background-color: rgb(29, 0, 0);
     border: 1px solid red;
-    border-radius: 3px;
-    width: 18vw;
+    border-radius: 4px;
+    width: 100%;
+    height: 3vh;
     box-sizing: border-box;
     box-shadow: 0 0 8px 2px rgb(54, 0, 0);
+    color: white;
+    font-size: clamp(12px, 1.vw, 18px);
+    align-self: center;
+    padding: 0 5px 0 5px;
 }
 
 .submitButton{
@@ -192,25 +220,27 @@ input{
         0 0 21px rgb(85, 0, 0, 0.5),
         0 0 42px red;
 
-    border: 1px solid red;
+    border: 1px solid white;
 
     border-radius: 3px;
     width: 18vw;
     box-sizing: border-box;
     box-shadow: 0 0 8px 2px rgb(54, 0, 0);
+
 }
 
-.topFormRow, .middleFormRow, .bottomFormRow{
-    justify-items: ;
+.submitButton:hover{
+    cursor: pointer;
 }
+
+
 
 
 fieldset{
-    display: grid;
-    grid-template-rows: auto;
     border: none;
     padding: 0px;
     margin: 0 0 1vh 0;
+    box-sizing: border-box;
 }
 
 .bodyHead{
@@ -237,13 +267,17 @@ fieldset{
 
 .login{
     color: rgb(255, 0, 0);
-    font-size: clamp(9px, 1.55vw, 18px);
+    font-size: clamp(9px, 1.9vw, 18px);
 
     text-shadow: 
     0 0 7px rgba(143, 0, 0, 0.5),
     0 0 10px rgb(235, 0, 0, 0.5),
     0 0 21px rgb(85, 0, 0, 0.5),
     0 0 42px red;
+}
+
+.login:hover{
+    cursor: pointer;
 }
 
 .textFooter{
