--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body{
     flex-direction: row;
     width: 67%;
     height: 100vh;
-    background-color: rgb(5, 0, 0);
+    background-color: rgb(0, 0, 0);
 
 }
 
@@ -195,7 +195,7 @@ label{
 
 input{
     background-color: rgb(29, 0, 0);
-    border: 1px solid red;
+    border: 1px solid rgb(255, 0, 0);
     border-radius: 4px;
     width: 100%;
     height: 3vh;
@@ -205,6 +205,14 @@ input{
     font-size: clamp(12px, 1.vw, 18px);
     align-self: center;
     padding: 0 5px 0 5px;
+}
+
+input:invalid{
+   border: 2px solid rgb(255, 0, 0);
+}
+
+input:valid{
+    border: 1px solid rgb(119, 0, 0);
 }
 
 .submitButton{
@@ -248,7 +256,7 @@ fieldset{
     font-weight: bold;
     font-size: clamp(9px, 1.6vw, 22px);
 
-    margin-top: 2vh;
+    margin-top: 4vh;
     margin-left: 10%;
     margin-right: auto;
     margin-bottom: 1vh;
@@ -265,20 +273,7 @@ fieldset{
     margin-bottom: 1vh;
 }
 
-.login{
-    color: rgb(255, 0, 0);
-    font-size: clamp(9px, 1.9vw, 18px);
 
-    text-shadow: 
-    0 0 7px rgba(143, 0, 0, 0.5),
-    0 0 10px rgb(235, 0, 0, 0.5),
-    0 0 21px rgb(85, 0, 0, 0.5),
-    0 0 42px red;
-}
-
-.login:hover{
-    cursor: pointer;
-}
 
 .textFooter{
     display:flex;
@@ -302,7 +297,9 @@ fieldset{
 }
 
 a{
+    font-style: none;
     color:rgba(255, 255, 255, 0.575);
+
 }
 
 a:hover{
@@ -311,7 +308,29 @@ a:hover{
 
 a:visited{
     color:rgba(255, 255, 255, 0.575);
+
+
+
 }
 
+.login{
+    color: rgb(255, 0, 0);
+    font-size: clamp(9px, 1.9vw, 18px);
 
+    text-shadow: 
+    0 0 7px rgba(143, 0, 0, 0.5),
+    0 0 10px rgb(235, 0, 0, 0.5),
+    0 0 21px rgb(85, 0, 0, 0.5),
+    0 0 42px red;
 
+    text-decoration: none;
+}
+
+.login:hover{
+    cursor: pointer;
+}
+
+.login:visited{
+    color: rgb(255, 0, 0);
+
+}
