--- a/styles.css
+++ b/styles.css
@@ -161,7 +161,7 @@ p {
 
     display: grid;
     grid-auto-flow: row;
-    gap: 10px 10px;
+    gap: 10px;
 
     width: 50vw;
 
@@ -169,15 +169,15 @@ p {
     
     margin-top: 4vh;
     margin-left: 10%;
-    margin-right: auto;
+    margin-right: 10%;
     margin-bottom: 4vh;
 }
 
 .topFormRow, .middleFormRow, .bottomFormRow{
     display: grid;
     grid-auto-flow: column;
-    gap: 10px 10px;
-}
+    gap: 10px 5px;
+    }
 
 .fName, .formE, .passOne{
     display: grid;
@@ -187,6 +187,7 @@ p {
 .lName, .formTel, .passTwo{
     display: grid;
     grid-auto-flow: row;
+    justify-content: left;
 }
 
 label{
@@ -197,7 +198,7 @@ input{
     background-color: rgb(29, 0, 0);
     border: 1px solid rgb(255, 0, 0);
     border-radius: 4px;
-    width: 100%;
+    width: 24vw;
     height: 3vh;
     box-sizing: border-box;
     box-shadow: 0 0 8px 2px rgb(54, 0, 0);
